--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="home-content">
         <h1 >Hi, It's <span>Praneeth</span></h1>
         <h3>
-          I am a <span> Web Developer</span>
+          I am a <span> Software Developer</span>
         </h3>
         <p>A highly motivated <span>Software developer</span> passionate about building scalable, efficient, and user-centric applications.
           Skilled in solving complex problems and delivering high-quality, innovative solutions. 🚀</p>
