--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
       <div class="about-content">
         <h2>About <span>Me</span></h2>
-        <p>Vellore Institute of Technology
+        <p>&#9658; Vellore Institute of Technology
        <span>2027</span>   
           <br>
-          Narayana College
+         &#9658; Narayana College
           Intermediate
           <span>2023</span>
           <br>
-          Oxford High School
+          &#9658; Oxford High School
           SSC
           <span>2021</span>
           </p>
