--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
      
     <header class="header">
-      <a href="#home" class="logo">
+      <a href="#" class="logo">
         Praneeth <span>Ummadisetty</span>
       </a>
 
