--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    
           <div class="project-card">
             <img src="food.webp" alt="">
-            <h3>ONLINE FOOD DELIVERY SYSTEM</h3>
+            <h3>Online Food Delivery System</h3>
             <p>The Online Food Delivery System is a web-based platform that allows users to order food from their favorite restaurants with ease. It provides a seamless experience for customers, restaurant owners, and delivery personnel.</p>
             <div class="btn">Review Project</div>
           </div>
