--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="btn-group">
           <a href="mailto:praneethummadisetty@gmail.com?subject=Hiring Inquiry&body=Hello, I am interested in hiring you for a project. Please let me know your availability and rates." class="btn">Hire me</a>
-          <a href="Frontend_Developer.pdf" download="Resume.pdf" class="btn">Resume</a>
+          <a href="Resume.pdf" download="Resume.pdf" class="btn">Resume</a>
         </div>
       </div>
       
