--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           scalable, and efficient. competent in resolving challenging issues and providing superior, creative solutions. </p>
         
         <div class="social-icons">
-          <a href="https://github.com/23mis7304" target="_blank">
+          <a href="https://github.com/Prani-25" target="_blank">
             <i class="bx bxl-github"></i>
           </a>
 
@@ -193,7 +193,7 @@
 
     <footer class="footer">
       <div class="social-icons">
-        <a href="https://github.com/23mis7304" target="_blank">
+        <a href="https://github.com/Prani-25" target="_blank">
           <i class="bx bxl-github"></i>
         </a>
 
