--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           Skilled in solving complex problems and delivering high-quality, innovative solutions. 🚀</p>
         
         <div class="social-icons">
-          <a href="https://github.com/23mis7304" target="_blank">
+          <a href="https://github.com/Prani-25" target="_blank">
             <i class="bx bxl-github"></i>
           </a>
 
@@ -187,7 +187,7 @@
 
     <footer class="footer">
       <div class="social-icons">
-        <a href="https://github.com/23mis7304" target="_blank">
+        <a href="https://github.com/Prani-25" target="_blank">
           <i class="bx bxl-github"></i>
         </a>
 
