--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           I am a <span> Software Developer</span>
         </h3>
         <p>A highly motivated <span>Software developer</span> passionate about building scalable, efficient, and user-centric applications.
-          Skilled in solving complex problems and delivering high-quality, innovative solutions. 🚀</p>
+          Skilled in solving complex problems and delivering high-quality, innovative solutions. </p>
         
         <div class="social-icons">
           <a href="https://github.com/Prani-25" target="_blank">
