--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="btn-group">
           <a href="mailto:praneethummadisetty@gmail.com?subject=Hiring Inquiry&body=Hello, I am interested in hiring you for a project. Please let me know your availability and rates." class="btn">Hire me</a>
-          <a href="Resume.pdf" download="Resume.pdf" class="btn">Resume</a>
+          <a href="Praneeth_Resume.pdf" download="Resume.pdf" class="btn">Resume</a>
         </div>
       </div>
       
@@ -222,3 +222,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
