--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
           <img src="traffic.webp" alt="">
           <h3>Smart Traffic Signal Management System</h3>
           <p>The Smart Traffic Signal Management System is an intelligent traffic control solution that optimizes traffic flow by dynamically adjusting signal timings based on real-time traffic conditions. This system helps in reducing congestion,  and improving road safety.</p>
+          <a href="https://github.com/Prani-25/Smart-Traffic-Management-Arduino/blob/main/Smart_Traffic_Management.ino" target="_blank">
           <div class="btn">Review Project</div>
+          </a>
+          
         </div>
       
         <div class="project-card">
@@ -222,5 +225,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
