--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <h2 class="heading">Contact <span>Me</span></h2>
        <h1>* Fill the details to contact me through Email</h1>
-      <form id="contact-form" action="https://formspree.io/f/mnnpnaay" method="POST">
+      <form id="contact-form" action="https://formspree.io/f/xyzlwvjn" method="POST">
         <div class="input-group">
           <div class="input-box">
             <input name="name" type="text" placeholder="Full Name" required>
@@ -225,6 +225,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
